# rag-pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: derived-docs.py  invariant-guard.py  settings-triad.py
.github/workflows/: ci.yml
data/: langchain_overview.md  rag_concepts.md  vector_stores.md
rag_pipeline/: __init__.py  cli.py  config.py  ingest.py  pipeline.py
tests/: conftest.py  invariants.py  test_app.py  test_cli.py  test_config.py  test_hooks.py  test_ingest.py  test_invariants.py  test_offline_guard.py  test_pipeline.py
