[project]
name = "rag-pipeline"
version = "0.1.0"
description = "A RAG pipeline built with LangChain, Voyage AI embeddings, and Claude"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3",
    "langchain-text-splitters>=0.3",
    "langchain-chroma>=0.2",
    "langchain-anthropic>=0.3",
    # Imported directly by pipeline.py, which catches anthropic.APIError to
    # translate provider failures into RuntimeError. Declared rather than left
    # transitive through langchain-anthropic: an import we name ourselves is an
    # import we must depend on ourselves, or a repin upstream breaks `rag query`
    # with nothing in CI predicting it.
    "anthropic>=0.117.0",
    # Voyage AI embeddings, used by build_embeddings() at both ingest and query.
    # The voyageai SDK it wraps is a thin HTTP client (no torch), so there is no
    # local model to download and nothing platform-specific to pin.
    "langchain-voyageai>=0.1.4",
    "chromadb>=0.5",
    "streamlit>=1.59",
    "python-dotenv>=1.0",
    "pypdf>=5.0",
]

[project.scripts]
rag = "rag_pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_pipeline"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.0",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff.lint]
# Beyond ruff's default (E4/E7/E9 + F): import sorting (I), 3.11+ idioms (UP),
# likely-bug patterns (B), and pytest style (PT), which is what caught the
# over-broad `pytest.raises` in test_ingest.py.
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "PT", "RUF"]
# E501 is the formatter's job; leaving it on would double-report every long line
# and fight `ruff format` over strings and comments it can't split.
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["rag_pipeline"]
